CRM-532(2)=> composer alignment issue , fixing padding

--- a/src/app/widget/widget.component.scss
+++ b/src/app/widget/widget.component.scss
@@ -1545,7 +1545,7 @@ button.close-widget-wrapper {
 }
 
 .widget-chat-composer.composer-disabled {
-  padding: 0px 38px 16px 40px !important;
+  padding: 0px 38px 17px 38px !important;
 }
 
 
